--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,14 @@
   --primary-color-red: #ee4266;
   --white-color: #fff;
   --white-color-header: #e4e6eb;
-  --background-primary: #f9f6f0;
+  --background-primary: #fbfbfb;
   --background-primary-2: #fffdfa;
   --black-color: #000;
   --text-color: #333;
   --border-color: #dbdbdb;
   --star-gold-color: #ffce3e;
   --btn-color: #956151;
+  --layout-nav-left: 200px;
 
   --header-height: 60px;
 }
