--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --star-gold-color: #ffce3e;
   --btn-color: #956151;
   --layout-nav-left: 200px;
+  --color-btn-add: #55ef8b;
 
   --header-height: 60px;
 }
