hien thi san pham

--- a/src/components/main/product/Product.css
+++ b/src/components/main/product/Product.css
@@ -6,6 +6,7 @@
 .header-product__btn {
   border: 1px solid #888;
   border-radius: 8px;
+  margin-right: 4px;
 }
 .header-product__btn:hover {
   background-color: var(--color-btn-add);
