--- a/src/components/main/product/AddProduct.css
+++ b/src/components/main/product/AddProduct.css
@@ -1,3 +1,14 @@
+.wrap-addprod {
+  display: flex;
+  justify-content: center;
+}
+.wrap-addprod__item {
+  width: 600px;
+  padding: 50px 80px;
+  border: 1px solid #999;
+  box-shadow: 0 0 10px 1px #999;
+  border-radius: 8px;
+}
 .addprod-item__Switch {
   display: flex;
   justify-content: center;
@@ -25,4 +36,31 @@
   font-size: 1.6rem;
   line-height: 1.8rem;
   margin-right: 4px;
+}
+.addprod-input__ten {
+  position: relative;
+}
+.addprod-input__ten-text {
+  position: absolute;
+  top: -3px;
+  left: -78px;
+  padding: 5px 12px;
+  border-bottom: 2px solid var(--primary-color-red);
+  color: var(--primary-color-red);
+  display: none;
+  font-size: 1.4rem;
+}
+.addprod-input__ten-text--active {
+  animation: hien 0.5s ease-in-out;
+  display: block;
+}
+@keyframes hien {
+  0% {
+    transform: scale(0);
+    transform-origin: right;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: right;
+  }
 }
