--- a/src/components/header/HeaderMain.css
+++ b/src/components/header/HeaderMain.css
@@ -26,16 +26,47 @@
 
 .headerMain_user-wrap:hover .dropdown-headerMain_user {
   display: block;
+  animation: hoverUser 0.5s ease-in-out;
+}
+@keyframes hoverUser {
+  0% {
+    display: none;
+    transform: scale(0);
+    transform-origin: top right;
+  }
+  100% {
+    display: block;
+    transform: scale(1);
+    transform-origin: top right;
+  }
 }
 .dropdown-headerMain_user {
+  display: none;
   position: absolute;
-  top: 17px;
+  top: 30px;
   right: 0;
   list-style: none;
   background-color: rgb(250, 245, 240);
   border-radius: 4px;
-  display: none;
   padding-left: 0;
+  padding: 6px 16px;
+}
+.dropdown-headerMain_user::before {
+  content: '';
+  position: absolute;
+  top: -20px;
+  right: 5px;
+  border: 10px solid;
+  border-color: transparent transparent rgb(250, 245, 240) transparent;
+}
+.dropdown-headerMain_user::after {
+  content: '';
+  position: absolute;
+  top: -20px;
+  right: 0;
+  background-color: transparent;
+  height: 20px;
+  width: 100%;
 }
 .dropdown-headerMain_user li {
   width: 90px;
@@ -43,4 +74,10 @@
   padding: 4px 0;
   border-bottom: 1px solid #999;
   text-align: center;
+  margin-bottom: 10px;
+}
+.dropdown-headerMain_user li:hover {
+  color: var(--primary-color-red);
+  transform: translateY(-1px);
+  border-bottom: 1px solid var(--primary-color-red);
 }
