--- a/src/components/main/product/EditProduct.css
+++ b/src/components/main/product/EditProduct.css
@@ -22,3 +22,14 @@
   margin-bottom: 20px;
   align-items: center;
 }
+.wrap-editprod {
+  display: flex;
+  justify-content: center;
+}
+.wrap-editprod__item {
+  width: 600px;
+  padding: 50px 80px;
+  border: 1px solid #999;
+  box-shadow: 0 0 10px 1px #999;
+  border-radius: 8px;
+}
