--- a/src/components/main/dashboard/Dashboard.css
+++ b/src/components/main/dashboard/Dashboard.css
@@ -7,6 +7,7 @@
   border-radius: 10px;
   width: 31%;
   overflow: hidden;
+  box-shadow: 0 0 8px 1px #999;
 }
 .dashboard-top {
   display: flex;
@@ -23,6 +24,7 @@
   border-radius: 8px;
   overflow: hidden;
   height: 500px;
+  box-shadow: 0px 0px 10px 1px #999;
 }
 
 .dashboard-main__element-container-top {
