--- a/src/components/main/product/ShowProduct.css
+++ b/src/components/main/product/ShowProduct.css
@@ -15,3 +15,21 @@
 .discount-card__product > .ant-card-body {
   padding: 12px 24px;
 }
+.container-loading {
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 6rem;
+  color: var(--primary-color-red);
+}
+.container-loading div {
+  font-size: 3rem;
+}
+.loading {
+  margin-bottom: 20px;
+
+  animation: spin 2s linear infinite;
+}
